Updated Site Updates Record on mobile and fixed time in the record

--- a/aboutThisSite/aboutThisSite.css
+++ b/aboutThisSite/aboutThisSite.css
@@ -204,5 +204,8 @@ img {
   #footer-text {
     font-size: 2.5em;
   }
+  li {
+    font-size: 2em;
+  }
 
 }
